[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmaconet"
version = "2.1.0"
description = "PharmacoNet: Open-Source Software for Protein-based Pharmacophore Modeling and Virtual Screening"
license = { text = "MIT" }
authors = [{ name = "Seonghwan Seo", email = "shwan0106@kaist.ac.kr" }]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "tqdm",
  "torch>=1.13.0",
  "numpy>=1.26,<1.27",
  "numba>=0.59",
  "omegaconf>=2.3.0",
  "molvoxel>=0.1.3",
  "gdown>=5.1.0",
  "biopython>=1.83"
]

[project.optional-dependencies]
appl = [
  "torch==2.3.1",
  "torch-geometric==2.4.0",
  "torch-scatter==2.1.2",
  "torch-sparse==0.6.18",
  "torch-cluster==1.6.3",
]

[project.urls]
Website = "https://github.com/SeonghwanSeo/PharmacoNet"
"Source Code" = "https://github.com/SeonghwanSeo/PharmacoNet"

[tool.setuptools.packages.find]
where = ["src"]

# CODING
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "T203",]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
diagnosticMode = "openFilesOnly"
reportImplicitStringConcatenation = false
reportGeneralTypeIssues = "warning"
reportDeprecated = "warning"
reportUnusedVariable = false
reportUnusedImport = false

